# mono

./: .bazelrc  .ci.bazelrc  .ci.darwin.startup.bazelrc  .ci.linux.startup.bazelrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .prettierignore  AGENTS.md  BUILD.bazel  CHECKS.toml  CHECKS.yaml  Cargo.toml  MODULE.bazel  REPOBIN.toml  eslint.config.js  package.json  pnpm-lock.yaml
.buildkite/steps/tests/: BUILD.bazel  checks_merge_queue_base_test.sh  checks_pr_base_test.sh
lib/rust/parley/: BUILD.bazel  Cargo.toml  README.md
lib/rust/parley/src/: lib.rs
tools/boss/app-macos/: .gitignore  BUILD.bazel  Boss.entitlements  Info.plist  Package.resolved  Package.swift  README.md  ghosttykit.BUILD
tools/boss/app-macos/Sources/: ActivityLogView.swift  AttentionsView.swift  AutomationsView.swift  BossMacApp.swift  BossMarkdownStyle.swift  CapabilityRegistry.swift  ChatViewModel+Attentions.swift  ChatViewModel+Dependencies.swift  ChatViewModel+FeatureFlags.swift  ChatViewModel+GitHub.swift  ChatViewModel+Hosts.swift  ChatViewModel+OptimisticKanban.swift  ChatViewModel+TaskDoc.swift  ChatViewModel+WorkBoardSections.swift  ChatViewModel.swift  ContentView.swift  DesignRendererQuestionsPanel.swift  DesignRendererView.swift  DesignsView.swift  DispatchEventsData.swift  DispatchEventsViewer.swift  EditorialControlsSheet.swift  EngineClient.swift  EngineProcessController.swift  EngineView.swift  FeatureFlagsViewer.swift  GitHubContentFetcher.swift  IpcLog.swift  KanbanBoardStyle.swift  LiveWorkerStateStore.swift  LogViewer.swift  MetricsViewer.swift  Models.swift  ReviewNotificationCenter.swift  ReviewTerminalView.swift  TranscriptView.swift  TranscriptViewerView.swift  TrekIconAssets.swift  TrekIdleFlavor.swift  UpdateLifecycle.swift  (+1 more)
tools/boss/app-macos/scripts/: bootstrap-ghosttykit.sh
tools/boss/bossctl/: BUILD.bazel  Cargo.toml  README.md
tools/boss/bossctl/src/: logs.rs  main.rs
tools/boss/cli/: BUILD.bazel  Cargo.toml  README.md
tools/boss/cli/src/: build_info_default.rs  buildkite_release.rs  github_app.rs  main.rs  repo_resolution.rs
tools/boss/cli/tests/: audit_effort.rs  editorial.rs  effort_and_model.rs  engine_ci_verbs.rs  external_tracker.rs  friendly_id.rs  infer_product.rs  repo_resolution.rs  shake.rs  uninstall.rs
tools/boss/client/: BUILD.bazel  Cargo.toml  README.md
tools/boss/client/src/: lib.rs
tools/boss/engine/: BUILD.bazel  Cargo.toml
tools/boss/engine/boss-transcript-markdown/: BUILD.bazel  Cargo.toml
tools/boss/engine/conflict-diagnosis/: BUILD.bazel  Cargo.toml  README.md
tools/boss/engine/core/: BUILD.bazel  Cargo.toml  README.md  build.rs
tools/boss/engine/editorial/: BUILD.bazel  Cargo.toml  README.md
tools/boss/engine/feature-flags/: BUILD.bazel  Cargo.toml  README.md
tools/boss/engine/pr-template/: BUILD.bazel  Cargo.toml  README.md
tools/boss/engine/remote/: boss-remote-run.sh
tools/boss/engine/src/: acp.rs  app.rs  audit.rs  build_info.rs  ci_log_reader.rs  ci_watch.rs  comments_anchor.rs  completion.rs  config.rs  conflict_diagnosis.rs  conflict_watch.rs  coordinator.rs  dead_pid_sweep.rs  dep_unblock_sweep.rs  design_detector.rs  dispatch_events.rs  dispatch_reader.rs  effort.rs  events_socket.rs  host_adapter.rs  host_registry.rs  host_scheduling.rs  ipc_log.rs  lib.rs  live_status.rs  live_status_loop.rs  live_status_redact.rs  live_worker_state.rs  main.rs  merge_poller.rs  merge_when_ready.rs  nudge_breaker.rs  orphan_sweep.rs  pane_summary.rs  pr_auto_bind_poller.rs  pr_url_capture.rs  remote_wrapper.rs  repo_slug.rs  run_reconcile.rs  runner.rs  (+12 more)
tools/boss/engine/ssh-transport/: BUILD.bazel  Cargo.toml  README.md
tools/boss/engine/tests/: comments_crud.rs  control_verbs.rs  stop_engine_runtime.rs  work_crud.rs
tools/boss/engine/transcript-tail/: BUILD.bazel  Cargo.toml  README.md
tools/boss/event-shim/: BUILD.bazel  Cargo.toml  README.md
tools/boss/event-shim/src/: main.rs
tools/boss/event-shim/tests/: shim.rs
tools/boss/github/: BUILD.bazel  Cargo.toml
tools/boss/github/src/: contents.rs  gh_runner.rs  lib.rs  pr_url.rs  repo_slug.rs
tools/boss/installer/: BUILD.bazel  distribution.xml  pkg.bzl  release.sh  workspace-status.sh
tools/boss/installer/entitlements/: app.entitlements  engine.entitlements
tools/boss/log-files/: BUILD.bazel  Cargo.toml
tools/boss/log-files/src/: lib.rs  paths.rs  reader.rs  segments.rs
tools/changelog/: BUILD.bazel  Cargo.toml  README.md
tools/changelog/src/: extract.rs  lib.rs  main.rs  model.rs  project.rs  render.rs
tools/checkleft/: BUILD.bazel  CHECKS.yaml  Cargo.toml  README.md  build.rs
tools/checkleft/api/: BUILD.bazel  package.json
tools/checkleft/api/javascript/: checkleft_exec.d.ts  checkleft_exec.mjs  checkleft_exec_child.mjs  (+1 more)
tools/checkleft/bazel/: BUILD.bazel  defs.bzl
tools/checkleft/docs/: buildkite-release-setup.md
tools/checkleft/examples/: config_resolution_bench.rs  wasm_aot_cache_bench.rs
tools/checkleft/musl/: BUILD.bazel  ext.bzl  transition.bzl
tools/checkleft/preinstalled-bundle/: BUILD.bazel  Cargo.toml  bundled.rs
tools/checkleft/sdk/: BUILD.bazel  Cargo.toml
tools/checkleft/sdk-macro/: BUILD.bazel  Cargo.toml
tools/checkleft/src/: bypass.rs  check.rs  config.rs  exclusion.rs  exclusion_matcher.rs  github_app_auth.rs  ifchange.rs  input.rs  install.rs  lib.rs  main.rs  output.rs  runner.rs  source_tree.rs  tests.rs  vcs.rs
tools/checkleft/tests/: change_detection_e2e.rs  checks_policy_guard_package_test.rs  starlark_text_fixture_package_archive_test.sh  starlark_text_package_test.rs
tools/checkleft/userdoc/: mkdocs.yml
tools/checkleft/wit/: check.wit
tools/cube/: BUILD.bazel  CHECKS.toml  Cargo.toml  README.md
tools/cube/docs/: main.md  remaining-work.md
tools/cube/src/: app.rs  audit.rs  cli.rs  command_runner.rs  config.rs  lib.rs  lock.rs  metadata.rs  paths.rs  pr_bookmark.rs  setup.rs  store.rs
tools/repobin/: Cargo.toml  README.md
tools/repobin/src/: app.rs  bazel.rs  cache.rs  cli.rs  config.rs  defaults.rs  dispatch.rs  dispatch_cache.rs  install.rs  lib.rs  shell.rs
(+635 files in other folders)
