load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

# Root BUILD file

exports_files([
    "Cargo.lock",
    "Cargo.toml",
    "package.json",
    "pnpm-lock.yaml",
    "pnpm-workspace.yaml",
])

npm_link_all_packages(name = "node_modules")

npm_link_package(
    name = "node_modules/@checkleft/exec",
    src = "//tools/checkleft/api:checkleft_exec_pkg",
)
