[workspace]
members = [
  "lib/rust/broker-robinhood",
  "lib/rust/git_utils",
  "tools/boss/bossctl",
  "tools/boss/cli",
  "tools/boss/client",
  "tools/boss/github",
  "tools/boss/engine/conflict-diagnosis",
  "tools/boss/engine/core",
  "tools/boss/engine/editorial",
  "tools/boss/engine/transcript-markdown",
  "tools/boss/engine/pr-template",
  "tools/boss/event-shim",
  "tools/boss/engine/feature-flags",
  "tools/boss/log-files",
  "tools/boss/protocol",
  "tools/boss/engine/ssh-transport",
  "tools/boss/engine/transcript-tail",
  "tools/hood",
  "tools/checkleft",
  "tools/checkleft/sdk",
  "tools/checkleft/sdk-macro",
  "tools/checkleft/sdk/examples/trivial-check",
  "tools/checkleft/checks/file/forbidden-path",
  "tools/checkleft/checks/file/ifchange",
  "tools/checkleft/checks/file/size",
  "tools/checkleft/checks/rust/giant-structs",
  "tools/checkleft/checks/rust/giant-structs-common",
  "tools/checkleft/checks/rust/giant-structs-create",
  "tools/checkleft/preinstalled-bundle",
  "tools/checkleft_package",
  "tools/cube",
  "tools/repobin",
  "tools/changelog",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.86"
bon = "3.9.1"
# chrono / chrono-tz: IANA-timezone-aware occurrence math for the
# automation scheduler (maintenance-tasks.md). `clock` is intentionally
# off — the scheduler injects "now" as epoch seconds, so we never need
# `Local::now` or the platform tz lookup that `clock` pulls in.
chrono = { version = "0.4.39", default-features = false, features = ["std"] }
chrono-tz = "0.10.1"
clap = "4.5.39"
directories = "5.0"
flate2 = "1.1.5"
fs4 = "0.13"
comfy-table = "7.2.2"
console = "0.15.11"
fastrand = "2.3.0"
globset = "0.4.18"
jaq-core = "1"
jaq-interpret = "1"
jaq-parse = "1"
hashbrown = { version = "0.15.5", features = ["default-hasher", "serde"] }
indicatif = "0.17.11"
jsonwebtoken = "10.4.0"
keyring = "3.6.3"
rand = "0.8"
rsa = "0.9"
regex = "1.11.1"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls-no-provider"] }
rpassword = "7.5.0"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
serde_urlencoded = "0.7"
shlex = "1.3.0"
syn = { version = "2.0.117", features = ["full"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = { version = "0.10.9", features = ["asm"] }
shell-words = "1.0"
tempfile = "3.25.0"
thiserror = "1.0"
tar = "0.4.45"
tokio = "1.45.0"
toml = "1.0.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tree-sitter = "0.26.7"
tree-sitter-java = "0.23.5"
tree-sitter-starlark = "1.3.0"
url = "2"
uuid = "1"
walkdir = "2.5.0"
wasmtime = "42.0.2"
wasmtime-wasi = "42.0.2"
wat = "1.240.0"
which = "7.0.3"
wiremock = "0.5.22"
