module(
    name = "mono",
)

bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "aspect_rules_js", version = "2.8.2")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "apple_support", version = "2.2.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_swift", version = "3.5.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "4.5.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift_package_manager", version = "1.13.0")

apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(
    apple_cc_configure,
    "local_config_apple_cc",
    "local_config_apple_cc_toolchains",
)
register_toolchains("@local_config_apple_cc_toolchains//:all")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    node_version = "22.11.0",
)
use_repo(node, "nodejs_toolchains")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(pnpm_version_from = "//:package.json")
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(
    npm,
    "npm",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    rustfmt_version = "1.95.0",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "mono_crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "mono_crates")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    resolved = "//tools/boss/app-macos:Package.resolved",
    swift = "//tools/boss/app-macos:Package.swift",
)
use_repo(
    swift_deps,
    "swift_package",
    "swiftpkg_textual",
)

# Prebuilt GhosttyKit.xcframework for the Bazel installer.
# Rebuild procedure: tools/boss/docs/runbooks/update-ghostty-prebuilt.md
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "ghostty_kit",
    urls = ["https://github.com/spinyfin/ghostty-prebuilts/releases/download/ghosttykit-b0f827665/GhosttyKit-b0f827665.tar.gz"],
    sha256 = "210c6914395c2222b76857cd63853916313a5c4a10964b934e38f84b8cf64a06",
    build_file = "//tools/boss/app-macos:ghosttykit.BUILD",
)
