module(
    name = "mono",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "apple_support", version = "2.2.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_swift", version = "3.5.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "4.5.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift_package_manager", version = "1.13.0")

# Zig-based hermetic CC toolchain used for musl cross-compilation.
# Provides @zig_sdk//libc_aware/toolchain:linux_amd64_musl (and arm64 variant)
# which cross-compile C/C++ code from any host to a fully-static musl binary.
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(
    apple_cc_configure,
    "local_config_apple_cc",
    "local_config_apple_cc_toolchains",
)

register_toolchains("@local_config_apple_cc_toolchains//:all")

# Zig-based hermetic C/C++ toolchain for musl cross-compilation.
# Only the libc_aware musl toolchains are registered here (they require
# @zig_sdk//libc:musl in the target platform, so they cannot accidentally
# match regular glibc Linux builds).
hermetic_cc_toolchain_config = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
)
use_repo(hermetic_cc_toolchain_config, "zig_sdk")

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_amd64_musl",
    "@zig_sdk//libc_aware/toolchain:linux_arm64_musl",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    # wasm32-wasip2 is the guest cross-compile target for checkleft external
    # check components (see tools/checkleft/wasm). Registering it here downloads
    # the wasm32-wasip2 std sysroot and a rust_toolchain whose
    # target_compatible_with is [wasm32, wasi, wasi_preview_2] — unambiguous, so
    # it is only ever selected for the //platforms:wasm32_wasip2 platform.
    extra_target_triples = ["wasm32-wasip2"],
    rustfmt_version = "1.95.0",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

# Musl Rust toolchains — registered BEFORE @rust_toolchains//:all so they win
# during toolchain resolution for platforms that carry @zig_sdk//libc:musl.
# For the default linux platform (no @zig_sdk//libc:musl), these are filtered
# out and the standard GNU toolchain from @rust_toolchains//:all is used.
musl_rust = use_extension("//tools/checkleft/musl:ext.bzl", "musl_rust_toolchain")
use_repo(
    musl_rust,
    "rust_musl_aarch64_apple_darwin_aarch64_unknown_linux_musl",
    "rust_musl_aarch64_apple_darwin_x86_64_unknown_linux_musl",
    "rust_musl_aarch64_unknown_linux_gnu_aarch64_unknown_linux_musl",
    "rust_musl_aarch64_unknown_linux_gnu_x86_64_unknown_linux_musl",
    "rust_musl_x86_64_apple_darwin_aarch64_unknown_linux_musl",
    "rust_musl_x86_64_apple_darwin_x86_64_unknown_linux_musl",
    "rust_musl_x86_64_unknown_linux_gnu_aarch64_unknown_linux_musl",
    "rust_musl_x86_64_unknown_linux_gnu_x86_64_unknown_linux_musl",
)

register_toolchains(
    "@rust_musl_aarch64_apple_darwin_x86_64_unknown_linux_musl//:toolchain",
    "@rust_musl_aarch64_apple_darwin_aarch64_unknown_linux_musl//:toolchain",
    "@rust_musl_x86_64_apple_darwin_x86_64_unknown_linux_musl//:toolchain",
    "@rust_musl_x86_64_apple_darwin_aarch64_unknown_linux_musl//:toolchain",
    "@rust_musl_aarch64_unknown_linux_gnu_x86_64_unknown_linux_musl//:toolchain",
    "@rust_musl_aarch64_unknown_linux_gnu_aarch64_unknown_linux_musl//:toolchain",
    "@rust_musl_x86_64_unknown_linux_gnu_x86_64_unknown_linux_musl//:toolchain",
    "@rust_musl_x86_64_unknown_linux_gnu_aarch64_unknown_linux_musl//:toolchain",
)

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "mono_crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
    # rules_rust's default set plus wasm32-wasip2 so that the guest SDK and its
    # deps (serde, serde_json, wit-bindgen) resolve for the Component Model
    # check target built by //tools/checkleft/wasm:defs.bzl. Without wasip2
    # here, crate_universe marks those deps `@platforms//:incompatible` for the
    # //platforms:wasm32_wasip2 platform and the guest build fails at analysis.
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "wasm32-unknown-unknown",
        "wasm32-wasip1",
        "wasm32-wasip2",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-nixos-gnu",
    ],
)
use_repo(crate, "mono_crates")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    resolved = "//tools/boss/app-macos:Package.resolved",
    swift = "//tools/boss/app-macos:Package.swift",
)
use_repo(
    swift_deps,
    "swift_package",
    "swiftpkg_textual",
)

# Prebuilt GhosttyKit.xcframework for the Bazel installer.
# Rebuild procedure: tools/boss/docs/runbooks/update-ghostty-prebuilt.md
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Hermetic, version-pinned wasm-tools binaries for the rust_wasm_component rule
# (//tools/checkleft/wasm). wasm-tools componentizes/validates guest check
# components and is selected per exec platform by the wasm_tools_toolchain
# targets registered below. To bump: change _WASM_TOOLS_VERSION-equivalent here,
# download the release tarballs, and update each sha256
# (`shasum -a 256 wasm-tools-<ver>-<plat>.tar.gz`).
http_archive(
    name = "wasm_tools_aarch64_macos",
    build_file = "//tools/checkleft/wasm:wasm_tools.BUILD",
    sha256 = "ed0fdbdaa80a5c7ef434ac583e1d8df0b8e45d718b08edf28ec27a74e4029897",
    strip_prefix = "wasm-tools-1.251.0-aarch64-macos",
    urls = ["https://github.com/bytecodealliance/wasm-tools/releases/download/v1.251.0/wasm-tools-1.251.0-aarch64-macos.tar.gz"],
)

http_archive(
    name = "wasm_tools_x86_64_linux",
    build_file = "//tools/checkleft/wasm:wasm_tools.BUILD",
    sha256 = "08d523676ec71d9afbae05aa4255041ce91bf2d325d87b7e722d190d558be689",
    strip_prefix = "wasm-tools-1.251.0-x86_64-linux",
    urls = ["https://github.com/bytecodealliance/wasm-tools/releases/download/v1.251.0/wasm-tools-1.251.0-x86_64-linux.tar.gz"],
)

http_archive(
    name = "wasm_tools_aarch64_linux",
    build_file = "//tools/checkleft/wasm:wasm_tools.BUILD",
    sha256 = "9d5cbab8810ffa43b1ad4c57efdd0092c5be6e905d3bd330d7daba5ad7aaa31d",
    strip_prefix = "wasm-tools-1.251.0-aarch64-linux",
    urls = ["https://github.com/bytecodealliance/wasm-tools/releases/download/v1.251.0/wasm-tools-1.251.0-aarch64-linux.tar.gz"],
)

register_toolchains(
    "//tools/checkleft/wasm:wasm_tools_aarch64_macos_toolchain",
    "//tools/checkleft/wasm:wasm_tools_x86_64_linux_toolchain",
    "//tools/checkleft/wasm:wasm_tools_aarch64_linux_toolchain",
)

http_archive(
    name = "ghostty_kit",
    build_file = "//tools/boss/app-macos:ghosttykit.BUILD",
    sha256 = "82b8d947484a21e1a9d186628b8af5e3f2e81dc96925f3cdbc1766ececa814a1",
    urls = ["https://github.com/spinyfin/ghostty-prebuilts/releases/download/ghosttykit-5659cef/GhosttyKit-5659cef.tar.gz"],
)
