load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("//tools/checkleft/musl:transition.bzl", "musl_binary")
load("//tools/checkleft/wasm:defs.bzl", "precompiled_cwasm_dir")

exports_files(["Cargo.toml"])

rust_library(
    name = "checkleft_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    # First-party check definitions embedded via include_str! (bundled.rs) and
    # the WIT package consumed by wasmtime::component::bindgen! at compile time
    # (component_bindings.rs). Both must be compile_data so they are readable
    # inside bazel's sandbox during proc-macro / macro expansion.
    compile_data = [
        "checks/format/bazel.yaml",
        "checks/format/rust.yaml",
        "checks/lint/bazel.yaml",
        "checks/lint/rust.yaml",
        "//tools/checkleft/wit:check.wit",
    ],
    crate_name = "checkleft",
    crate_root = "src/lib.rs",
    edition = "2024",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    # IFCHANGE(wasmtime-version): keep in sync with the wasmtime dependency in
    # Cargo.toml.  CHECKLEFT_WASMTIME_VERSION is part of the .cwasm AOT cache
    # key (src/external/runtime/cwasm_cache.rs); it must change whenever
    # wasmtime is bumped so that stale .cwasm files are never deserialized.
    # build.rs emits the same value for cargo builds by reading Cargo.lock.
    # THENCHANGE(Cargo.toml)
    rustc_env = {
        "CHECKLEFT_WASMTIME_VERSION": "42.0.2",
    },
    visibility = ["//:__subpackages__"],
    deps = all_crate_deps(normal = True) + [
        "//tools/checkleft/preinstalled-bundle:checkleft_wasm_bundle_lib",
        "@@rules_rust++crate+mono_crates__syn-2.0.117//:syn",
    ],
)

rust_binary(
    name = "checkleft",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/main.rs",
    edition = "2024",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    # CHECKLEFT_VERSION is set via --define by the release pipeline; .bazelrc
    # defaults it to "0.0.0-dev" for local and CI non-release builds.
    rustc_env = {
        "CHECKLEFT_BUILD_VERSION": "$(CHECKLEFT_VERSION)",
    },
    visibility = ["//tools/checkleft/bazel:__pkg__"],
    deps = [
        ":checkleft_lib",
    ] + all_crate_deps(normal = True),
)

# Host tool: precompile each bundled wasm check component to an AOT `.cwasm`
# whose filename is the canonical runtime cache key (src/external/runtime/
# cwasm_cache.rs). Reuses checkleft_lib's `precompile_into_cache_dir`, so the
# wasmtime engine config and cache-key axes are guaranteed identical to the
# runtime — a mismatch would silently re-open the JIT path. Consumed by the
# precompiled_cwasm_dir rule below.
rust_binary(
    name = "precompile_cwasm",
    srcs = ["precompile_cwasm.rs"],
    crate_root = "precompile_cwasm.rs",
    edition = "2024",
    # Used only as the implicit `_precompile_tool` of `precompiled_cwasm_dir`,
    # whose rule is defined in //tools/checkleft/wasm. Bazel checks implicit-dep
    # visibility against the rule's definition package, so that package needs to
    # see it; same-package (//tools/checkleft) use is always allowed.
    visibility = ["//tools/checkleft/wasm:__pkg__"],
    deps = [
        ":checkleft_lib",
    ] + all_crate_deps(normal = True),
)

# Build-time AOT `.cwasm` fixtures for the bundled wasm check components, keyed to
# the runtime cache axes (artifact sha256 / wasmtime version / engine config /
# host target). Staged as `data` for checkleft_lib_test so the heavy
# `rust/giant-structs` tests deserialize the precompiled artifact (~20 ms) rather
# than JIT-compiling the component at runtime (~10 s in a debug test binary, and
# stacking up under test parallelism) — the cost that approached the 60 s
# small-test timeout. See
# docs/investigations/checkleft-lib-test-wasm-compile-timeout.md.
#
# Host-built, not committed: the `.cwasm` is not portable across wasmtime
# version / engine config / target, all of which the cache key already pins.
precompiled_cwasm_dir(
    name = "precompiled_cwasm",
    components = [
        "//tools/checkleft/preinstalled-bundle:preinstalled_bundle_component",
    ],
)

# Statically-linked Linux binary via musl cross-compilation.
# Builds checkleft for x86_64-unknown-linux-musl using the musl Rust toolchain
# registered in MODULE.bazel plus the hermetic_cc_toolchain (Zig CC) for any
# C deps (tree-sitter, wasmtime).  Output: a static ELF with no glibc dependency.
#
# Usage:
#   bazel build //tools/checkleft:checkleft_musl
#   file $(bazel cquery --output=files //tools/checkleft:checkleft_musl)
#     → should report "ELF 64-bit ... statically linked"
musl_binary(
    name = "checkleft_musl",
    binary = ":checkleft",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "checkleft_lib_test",
    size = "small",
    # The yaml files are the canonical first-party check definitions; the fixtures
    # back the hermetic parity test in src/external/declarative/parity_e2e.rs;
    # check.wit is the WIT contract consumed by wasmtime::component::bindgen! at
    # compile time in component_bindings.rs. All are embedded/read at compile time.
    compile_data = [
        "checks/format/bazel.yaml",
        "checks/format/rust.yaml",
        "checks/lint/bazel.yaml",
        "checks/lint/rust.yaml",
        "tests/fixtures/buildifier/malformed.bzl.fixture",
        "tests/fixtures/buildifier/unformatted.bzl.fixture",
        "//tools/checkleft/wit:check.wit",
    ],
    crate = ":checkleft_lib",
    # The real buildifier binary, staged into the test's runfiles so the
    # declarative pipeline can run hermetically (no nested bazel) and be compared
    # against the built-in BuildifierCheck. parity_e2e.rs resolves it from the
    # CHECKLEFT_E2E_BUILDIFIER runfiles path via @rules_rust//rust/runfiles.
    #
    # :precompiled_cwasm stages the build-time AOT `.cwasm` fixtures; the heavy
    # rust/giant-structs tests point their executor cache at this directory
    # (resolved from CHECKLEFT_PRECOMPILED_CWASM_DIR via runfiles in
    # external::test_support) so they deserialize the component instead of
    # JIT-compiling it at runtime.
    data = [
        ":precompiled_cwasm",
        "@buildifier_prebuilt//:buildifier",
    ],
    env = {
        "CHECKLEFT_E2E_BUILDIFIER": "$(rlocationpath @buildifier_prebuilt//:buildifier)",
        "CHECKLEFT_PRECOMPILED_CWASM_DIR": "$(rlocationpath :precompiled_cwasm)",
    },
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + ["@rules_rust//rust/runfiles"],
)

rust_test(
    name = "checkleft_bin_test",
    size = "small",
    crate = ":checkleft",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

# Functional / end-to-end change-detection suite: drives a real git repo (and a
# jj-colocated variant) through every scenario in the design matrix and asserts
# both the resolved base sha and the scoped file set. Exercises the public
# `resolve_change_plan` entry point exactly as the binary does. The vendored
# GitHub event payloads under tests/fixtures are embedded via include_str!.
rust_test(
    name = "change_detection_e2e_test",
    size = "small",
    srcs = ["tests/change_detection_e2e.rs"],
    compile_data = glob(["tests/fixtures/**"]),
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        ":checkleft_lib",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
