[package]
name = "checkleft"
version = "0.1.0-alpha.8"
edition.workspace = true
workspace = "../.."
description = "Experimental repository convention checker; API and behavior may change without notice"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/spinyfin/mono"
homepage = "https://github.com/spinyfin/mono"
documentation = "https://docs.rs/checkleft"
keywords = ["cli", "lint", "repository", "checks"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.93.1"
include = ["src/**", "examples/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[lib]
path = "src/lib.rs"

[features]
benchmarking = []

[[bin]]
name = "checkleft"
path = "src/main.rs"

[[example]]
name = "config_resolution_bench"
path = "examples/config_resolution_bench.rs"
required-features = ["benchmarking"]

[[example]]
name = "wasm_aot_cache_bench"
path = "examples/wasm_aot_cache_bench.rs"
required-features = ["benchmarking"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
console = { workspace = true }
directories = { workspace = true }
clap = { workspace = true, features = ["derive"] }
flate2 = { workspace = true }
globset = { workspace = true }
jaq-core = { workspace = true }
jaq-interpret = { workspace = true }
jaq-parse = { workspace = true }
hashbrown = { workspace = true }
jsonwebtoken = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
syn = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "fmt",
  "std",
  "env-filter",
] }
tree-sitter = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-starlark = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
wasmtime = { version = "42.0.1", default-features = false, features = [
  "anyhow",
  "component-model",
  "cranelift",
  "runtime",
  "std",
] }
wasmtime-wasi = { workspace = true }
starlark = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
filetime = "0.2"
rand = { workspace = true }
rsa = { workspace = true }
wat = { workspace = true }
wiremock = { workspace = true }
