load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

exports_files(["Cargo.toml"])

rust_library(
    name = "cube_lib",
    crate_name = "cube",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    crate_root = "src/lib.rs",
    edition = "2024",
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_binary(
    name = "cube",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/main.rs",
    edition = "2024",
    deps = [
        ":cube_lib",
    ] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = [
        "//tools/boss/app-macos:__pkg__",
        "//tools/boss/installer:__pkg__",
    ],
)

rust_test(
    name = "cube_lib_test",
    crate = ":cube_lib",
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

rust_test(
    name = "cube_bin_test",
    crate = ":cube",
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

