[package]
name = "cube"
version.workspace = true
edition.workspace = true
workspace = "../.."

[dependencies]
clap = { workspace = true, features = ["derive"] }
console = { workspace = true }
fs4 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
