[package]
name = "cube"
version.workspace = true
edition.workspace = true
workspace = "../.."

[dependencies]
bon = { workspace = true }
clap = { workspace = true, features = ["derive"] }
console = { workspace = true }
fs4 = { workspace = true }
git-utils = { path = "../../lib/rust/git_utils" }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
